chore: make pill layout show up correctly on mobile

--- a/assets/home.css
+++ b/assets/home.css
@@ -65,3 +65,10 @@
 .pill a {
   color: white;
 }
+
+@media (max-width: 1000px) {
+  .pill {
+    width: 49%;
+    margin-left: 0px;
+  }
+}
